# order-book-service

./: .gitignore  README.md
.github/workflows/: ci.yml  order-book-servicei-ci.yml  rust.yml
service/: Cargo.toml  build.rs
service/cli/: Cargo.toml
service/cli/src/: main.rs
service/client/: Cargo.toml
service/client/src/: lib.rs
service/common/: Cargo.toml
service/common/src/: lib.rs
service/protos/: orderbook.proto
service/server/: Cargo.toml
service/server/src/: aggregator.rs  exchange.rs  grpc_server.rs  main.rs
service/server/src/exchanges/: binance.rs  bitstamp.rs
service/src/: exchange.rs  exchanges.rs  lib.rs  main.rs
service/src/client/: grpc_client.rs
service/src/exchanges/: binance.rs
service/src/server/: aggregator.rs  exchange.rs  exchanges.rs  grpc_server.rs  main.rs
service/src/server/exchanges/: binance.rs  bitstamp.rs
