[package]
name = "order-book-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
futures-util = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
