[package]
name = "order-book-service-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
order-book-service-client = { path = "../client" }
order-book-service-types = { path = "../common" }
tokio = { version = "1.24.0", features = ["full"] }
tokio-stream = "0.1.11"
url = "2.3.1"