[package]
name = "order-book-service-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
futures-util = "0.3.25"
order-book-service-types = { path = "../common" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tonic = "0.8.3"
url = "2.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
order-book-service-client = { path = "../client" }